Added remaining content to resume

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 FROM fedora:40
-RUN dnf install -y git make texlive-scheme-basic latexmk \
+RUN dnf install -y git make texlive-scheme-basic latexmk texlive-paracol texlive-latexindent \
     && dnf clean all
 RUN useradd -m developer
 USER developer
